# SignSecure-E-Signature-Platform

./: README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/document/: PDFViewer.tsx  SignersList.tsx
frontend/src/components/routing/: PrivateRoute.tsx  PublicRoute.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: DocumentContext.tsx  UserContext.tsx
frontend/src/data/: mockData.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/documents/: DocumentEditor.tsx  DocumentView.tsx  DocumentsList.tsx
frontend/src/pages/signing/: SignDocument.tsx  SigningComplete.tsx
frontend/src/types/: api.ts  index.ts
signsecure/: .gitignore  README.md  db.sqlite3  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
signsecure/.devcontainer/: devcontainer.json
signsecure/.envs/.local/: .postgres
signsecure/compose/production/django/: Dockerfile
signsecure/compose/production/traefik/: traefik.yml
signsecure/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
signsecure/config/settings/: base.py  local.py  production.py  test.py
signsecure/core/: apidate.py  fields.py  models.py
signsecure/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
signsecure/locale/en_US/LC_MESSAGES/: django.po
signsecure/locale/fr_FR/LC_MESSAGES/: django.po
signsecure/locale/pt_BR/LC_MESSAGES/: django.po
signsecure/requirements/: base.txt  local.txt  production.txt
signsecure/signsecure/: conftest.py
signsecure/signsecure/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
signsecure/signsecure/documents/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
signsecure/signsecure/documents/migrations/: 0001_initial.py  0002_alter_formfield_height_alter_formfield_width_and_more.py  0003_alter_formfield_height_alter_formfield_width_and_more.py
signsecure/signsecure/documents/templates/documents/email/: signing_invitation.html  signing_invitation.txt
signsecure/signsecure/templates/: base.html
signsecure/signsecure/users/: adapters.py  apps.py  models.py  views.py
signsecure/signsecure/users/api/: serializers.py  views.py
signsecure/signsecure/users/migrations/: 0001_initial.py
signsecure/signsecure/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
signsecure/signsecure/users/tests/api/: test_urls.py  test_views.py
src/: App.tsx
src/components/document/: PDFViewer.tsx  SignatureCanvas.tsx  SignatureField.tsx
src/components/ui/: Input.tsx
src/contexts/: UserContext.tsx
src/layouts/: AuthLayout.tsx
src/pages/documents/: DocumentEditor.tsx  DocumentUpload.tsx
src/types/: index.ts
